<resources>
    <string name="app_name">MyGym</string>
    <string name="_07711_223344">07711 223344</string>
    <string name="email_adress_com">email@adress.com</string>
    <string name="your_account_details">Your Account Details</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="phone_no">Phone No</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="fitness_app">Fitness App</string>
    <string name="motivate_yourself_with_greatest_quotes_of_all_time">Motivate yourself with greatest quotes of all time!</string>
    <string name="click_here_if_you_want_to_become_a_member_of_our_gym">Click here if you want to become a member of our gym!</string>
    <string name="use_our_stopwatch">Use our stopwatch!</string>
    <string name="for_all_gym_lovers">For all gym lovers!</string>
    <string name="for_all_calisthenics_lovers">For all calisthenics lovers!</string>
    <string name="welcome_to_mygym">Welcome to MyGym!</string>
    <string name="next_quote">Next Quote</string>
    <string name="the_quote_will_be_displayed_here">The quote will be displayed here</string>

    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="genius_is_one_percent_inspiration_and_ninety_nine_percent_perspiration">Genius is one percent inspiration and ninety-nine percent perspiration.</string>
    <string name="hardstyle_plank">Hardstyle Plank</string>
    <string name="dead_bug">Dead Bug</string>
    <string name="hollow_extensions_to_cannonball">Hollow Extensions To Cannonball</string>
    <string name="hanging_leg_circles">Hanging Leg Circles</string>
    <string name="hanging_bicycles">Hanging Bicycles</string>
    <string name="hanging_side_to_side_knees">Hanging Side-To-Side Knees</string>
    <string name="toe_taps">Toe Taps</string>
    <string name="mountain_climbers">Mountain Climbers</string>
    <string name="plank_crunches">Plank Crunches</string>
    <string name="bird_dog">Bird Dog</string>
    <string name="australian_pull_ups">Australian Pull-Ups</string>
    <string name="high_pull_ups">High Pull-Ups</string>
    <string name="eccentric_pull_ups">Eccentric Pull-Ups</string>
    <string name="arched_pull_ups">Arched Pull-Ups</string>
    <string name="middle_pause_pull_ups">Middle Pause Pull-Ups</string>
    <string name="front_lever_raises">Front Lever Raises</string>
    <string name="muscle_ups">Muscle-Ups</string>
    <string name="face_pull_with_band">Face Pull With Band</string>
    <string name="pull_ups_against_band">Pull-ups Against Band</string>
    <string name="chin_ups">Chin-Ups</string>
    <string name="dips">Dips</string>
    <string name="incline_push_ups">Incline Push-Ups</string>
    <string name="decline_push_ups">Decline Push-Ups</string>
    <string name="clap_push_ups">Clap Push-Ups</string>
    <string name="straight_bar_dips">Straight Bar Dips</string>
    <string name="diamond_push_ups">Diamond Push-Ups</string>
    <string name="wide_push_ups">Wide Push-Ups</string>
    <string name="aztec_push_ups">Aztec Push-Ups</string>
    <string name="spider_man_push_ups">Spider-Man Push-Ups</string>
    <string name="free_squats">Free Squats</string>
    <string name="pistol_squats">Pistol Squats</string>
    <string name="box_jumps">Box Jumps</string>
    <string name="spanish_squats">Spanish Squats</string>
    <string name="lunges">Lunges</string>
    <string name="side_squats">Side Squats</string>
    <string name="glute_bridges">Glute Bridges</string>
    <string name="sissy_squats">Sissy Squats</string>
    <string name="chair_hold_against_wall">Chair Hold Against Wall</string>
    <string name="calf_raises">Calf Raises</string>
    <string name="cable_machine_crunches">Cable Machine Crunches</string>
    <string name="rowing_machine_knee_tucks">Rowing Machine Knee Tucks</string>
    <string name="pullup_bar_knee_raises">Pullup Bar Knee Raises</string>
    <string name="incline_bench_situps">Incline Bench Situps</string>
    <string name="glute_ham_developer_sit_up">Glute-Ham Developer Sit Up</string>
    <string name="cable_oblique_crunch">Cable Oblique Crunch</string>
    <string name="cable_isometric_hold">Cable Isometric Hold</string>
    <string name="trunk_twists">Trunk Twists</string>
    <string name="abs_roll_with_side_rotation">Abs Roll With Side Rotation</string>
    <string name="overhead_kneeling_cable_hold">Overhead kneeling cable hold</string>
    <string name="the_most_efficient_exercises">The Most Efficient exercises</string>
    <string name="dumbbell_curls">Dumbbell Curls</string>
    <string name="hammer_curls">Hammer Curls</string>
    <string name="incline_dumbbell_curls">Incline Dumbbell Curls</string>
    <string name="zottman_curls">Zottman Curls</string>
    <string name="reverse_curl_straight_bar">Reverse Curl Straight Bar</string>
    <string name="skull_crushers">Skull Crushers</string>
    <string name="close_grip_bench_press">Close-Grip Bench Press</string>
    <string name="cable_rope_tricep_pushdown">Cable Rope Tricep Pushdown</string>
    <string name="tricep_dips">Tricep Dips</string>
    <string name="one_arm_overhead_extensions">One-Arm Overhead Extensions</string>
    <string name="the_most_efficient_excercises">The Most Efficient Excercises</string>
    <string name="deadlift">Deadlift</string>
    <string name="t_bar_rows">T-Bar Rows</string>
    <string name="lat_pull_downs">Lat Pull-Downs</string>
    <string name="seated_rows">Seated Rows</string>
    <string name="single_arm_smith_machine_row">Single-Arm Smith Machine Row</string>
    <string name="single_arm_dumbbell_rows">Single-Arm Dumbbell Rows</string>
    <string name="dumbbell_pull_overs">Dumbbell Pull-Overs</string>
    <string name="chest_supported_rows">Chest-Supported Rows</string>
    <string name="renegade_rows">Renegade Rows</string>
    <string name="flat_bench_press">Flat Bench Press</string>
    <string name="incline_bench_press">Incline Bench Press</string>
    <string name="chest_flyes">Chest Flyes</string>
    <string name="dumbbell_pullover">Dumbbell Pullover</string>
    <string name="decline_bench_press">Decline Bench Press</string>
    <string name="cable_crossover">Cable Crossover</string>
    <string name="reverse_grip_bench_press">Reverse-Grip Bench Press</string>
    <string name="cable_iron_cross">Cable Iron Cross</string>
    <string name="plate_press_out">Plate Press-Out</string>
    <string name="around_the_world">Around the world</string>
    <string name="goblet_squat">Goblet Squat</string>
    <string name="leg_extensions">Leg Extensions</string>
    <string name="leg_curls">Leg Curls</string>
    <string name="leg_press">Leg Press</string>
    <string name="squat_jump">Squat Jump</string>
    <string name="hex_bar_deadlift">Hex Bar Deadlift</string>
    <string name="walking_lunges_with_dumbbells">Walking Lunges With Dumbbells</string>
    <string name="romanian_deadlift">Romanian Deadlift</string>
    <string name="sled_pushes">Sled Pushes</string>
    <string name="bulgarian_split_squats">Bulgarian Split Squats</string>
    <string name="overhead_shoulder_press">Overhead Shoulder Press</string>
    <string name="shoulder_press">Shoulder Press</string>
    <string name="reverse_pec_deck_flyes">Reverse Pec Deck Flyes</string>
    <string name="bent_over_dumbbell_lateral_raises">Bent-Over Dumbbell Lateral Raises</string>
    <string name="reverse_cable_crossover">Reverse Cable Crossover</string>
    <string name="arnold_presses">Arnold Presses</string>
    <string name="high_pulls">High Pulls</string>
    <string name="face_pulls">Face Pulls</string>
    <string name="front_raises">Front Raises</string>
    <string name="bruce_wayne">Bruce Wayne</string>
    <string name="rest_is_over_keep_pushing">Rest is over keep pushing!</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="muscle_groups">Muscle Groups</string>
    <string name="chest_workout">Chest Workout</string>
    <string name="back_workout">Back Workout</string>
    <string name="legs_workout">Legs Workout</string>
    <string name="abs_workout">Abs Workout</string>
    <string name="shoulder_workout">Shoulder Workout</string>
    <string name="arms_workout">Arms Workout</string>
</resources>