<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="36dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:textSize="24sp"
        android:text="@string/your_account_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="16sp"
        android:layout_marginTop="48dp"
        android:id="@+id/text_view_user_full_name"
        tools:text="Mr Fullname User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="24dp"
        android:textColor="@color/blue_2"
        android:textSize="16sp"
        android:id="@+id/text_view_email_address"
        android:text="@string/email_adress_com"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/blue_2"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:id="@+id/text_view_phone"
        android:text="@string/_07711_223344"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>