<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#CD2196F3"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text_view_groups"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:text="@string/muscle_groups"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_chest"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chest_workout"
                    tools:ignore="RtlCompat" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_back"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back_workout"
                    tools:ignore="RtlCompat" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_legs"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/legs_workout"
                    tools:ignore="RtlCompat" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_abs"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/abs_workout"
                    tools:ignore="RtlCompat" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_shoulder"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shoulder_workout"
                    tools:ignore="RtlCompat" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_arms"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arms_workout"
                    tools:ignore="RtlCompat" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>